--- a/SchoolCalendar/Views/Child/Index.cshtml
+++ b/SchoolCalendar/Views/Child/Index.cshtml
@@ -19,6 +19,7 @@ else
             <tr>
                 <th>Imie i nazwisko</th>
                 <th>Niepełnosprawność</th>
+                <th>Usuń</th>
             </tr>
         </thead>
         <tbody>
@@ -27,8 +28,34 @@ else
                 <tr>
                     <td>@Html.ActionLink(child.Name, "Edit", "Child", new { id = child.Id }, null)</td>
                     <td>@child.Disability</td>
+                    <td>
+                        <button data-child-id="@child.Id" class="btn-link js-delete">Usuń</button>
+                    </td>
                 </tr>
             }
         </tbody>
     </table>
+}
+@section scripts
+{
+    <script>
+        $(document).ready(function () {
+            $("#children .js-delete").on("click", function () {
+                var button = $(this);
+                bootbox.confirm("Potwierdź operację usówania", function (result) {
+                    if (result{
+                        $ajax({
+                            url: "/child/" + button.attr("data-child-id"),
+                            method: "DELETE",
+                            success: function () {
+                                button.parents("tr").remove();
+                            }
+                        });
+                    }
+                })
+
+            });
+        });
+    </script>
+
 }
