--- a/SchoolCalendar/Views/Shared/_NavBar.cshtml
+++ b/SchoolCalendar/Views/Shared/_NavBar.cshtml
@@ -13,7 +13,7 @@
                 <li>@Html.ActionLink("Placówka", "Index", "School")</li>
                 <li>@Html.ActionLink("Pracownicy", "Index", "Employee")</li>
                 <li>@Html.ActionLink("Dzieci", "Index", "Child")</li>
-                <li>@Html.ActionLink("Stanowiska", "Index", "Child")</li>
+                <li>@Html.ActionLink("Stanowiska", "Index", "JobPosition")</li>
                 <li>@Html.ActionLink("Kalendarz", "Index", "CalendarEvent")</li>
             </ul>
             @Html.Partial("_LoginPartial")
