--- a/SchoolCalendar/Views/Child/ChildForm.cshtml
+++ b/SchoolCalendar/Views/Child/ChildForm.cshtml
@@ -20,8 +20,20 @@
     <div class="form-group">
         @Html.LabelFor(c => c.Child.Disability)
         @Html.TextBoxFor(c => c.Child.Disability, new { @class = "form-control" })
+    </div> <div class="form-group">
+        @Html.LabelFor(c => c.Child.DecisionNumber)
+        @Html.TextBoxFor(c => c.Child.DecisionNumber, new { @class = "form-control" })
+    </div> <div class="form-group">
+        @Html.LabelFor(c => c.Child.OpinionNumber)
+        @Html.TextBoxFor(c => c.Child.OpinionNumber, new { @class = "form-control" })
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(c => c.Child.SchoolId)
+        @Html.DropDownListFor(c => c.Child.SchoolId, new SelectList(Model.Schools, "Id", "Name"), "", new { @class = "form-control" })
     </div>
 
     @Html.HiddenFor(c => c.Child.Id);
     <button type="submit" class="btn btn-primary">Zapisz</button> @Html.ActionLink("Powrót", "Index", "Child", null, new { @class = "btn btn-primary" })
+
 }
