--- a/SchoolCalendar/Views/Shared/_NavBar.cshtml
+++ b/SchoolCalendar/Views/Shared/_NavBar.cshtml
@@ -12,8 +12,9 @@
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Placówka", "Index", "School")</li>
                 <li>@Html.ActionLink("Pracownicy", "Index", "Employee")</li>
-                <li>@Html.ActionLink("Dzieci", "Index", "Child")</li>
                 <li>@Html.ActionLink("Stanowiska", "Index", "JobPosition")</li>
+                <li>@Html.ActionLink("Grupy", "Index", "Group")</li>
+                <li>@Html.ActionLink("Dzieci", "Index", "Child")</li>
                 <li>@Html.ActionLink("Kalendarz", "Index", "CalendarEvent")</li>
             </ul>
             @Html.Partial("_LoginPartial")
